asg/tests/pass/structs/self_struct.leo
struct Foo {
    static function new() -> Self {
        return Self { };
    }
}

function main() {
    const a = Foo::new();
}